--- a/ShoppingList/Resources/Styles/Colors.xaml
+++ b/ShoppingList/Resources/Styles/Colors.xaml
@@ -4,11 +4,11 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 
-    <Color x:Key="Primary">#512BD4</Color>
-    <Color x:Key="Secondary">#DFD8F7</Color>
-    <Color x:Key="Tertiary">#2B0B98</Color>
-    <Color x:Key="White">White</Color>
-    <Color x:Key="Black">Black</Color>
+    <Color x:Key="Primary">#E2EDEA</Color>
+    <Color x:Key="Secondary">#B357DD</Color>
+    <Color x:Key="Tertiary">#31B18C</Color>
+    <Color x:Key="White">#B357DD</Color>
+    <Color x:Key="Black"></Color>
     <Color x:Key="Gray100">#E1E1E1</Color>
     <Color x:Key="Gray200">#C8C8C8</Color>
     <Color x:Key="Gray300">#ACACAC</Color>
