Implemented Settings Flyout

--- a/ShoppingList/AppShell.xaml
+++ b/ShoppingList/AppShell.xaml
@@ -4,11 +4,21 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:ShoppingList"
-    Shell.FlyoutBehavior="Disabled">
+    xmlns:views="clr-namespace:ShoppingList"
+    Shell.FlyoutBehavior="Flyout">
 
     <ShellContent
         Title="Home"
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage" />
+
+
+    <FlyoutItem FlyoutDisplayOptions="AsMultipleItems">
+        <ShellContent Title="Settings" 
+                      Icon="settings_outline.svg"
+                      Route="SettingsView"
+                      ContentTemplate="{DataTemplate views:SettingsView}"/>
+
+    </FlyoutItem>
 
 </Shell>
