Starting some API work

--- a/ShoppingList/View/MainPage.xaml
+++ b/ShoppingList/View/MainPage.xaml
@@ -32,6 +32,8 @@
         <Button Text="Get UserLists"
                 Command="{Binding GetUserListsCommand}"
                 IsEnabled="{Binding IsNotBusy}"
+                TextColor="{StaticResource Primary}"
+                BackgroundColor="{StaticResource Secondary}"
                 Grid.Row="1"
                 Margin="8"/>
 
@@ -39,6 +41,8 @@
         <Button Text="Create New List"
                 Command="{Binding CreateUserListCommand}"
                 IsEnabled="{Binding IsNotBusy}"
+                TextColor="{StaticResource Primary}"
+                BackgroundColor="{StaticResource Secondary}"
                 Grid.Row="1"
                 Grid.Column="3"
                 Margin="8"/>
