--- a/ShoppingList/View/SettingsView.xaml
+++ b/ShoppingList/View/SettingsView.xaml
@@ -38,6 +38,23 @@
                       Color="{StaticResource Primary}"
                       HorizontalOptions="End"/>
         </HorizontalStackLayout>
+
+        <HorizontalStackLayout
+            Margin="25,0,0,0">
+            <Label Text="Default Kroger Location:"
+                   TextColor="{StaticResource Primary}"
+                   Margin="0,0,25,0"/>
+            <Label Text="{Binding KrogerLocation}"
+                   TextColor="{StaticResource Primary}"
+                   >
+                <Label.GestureRecognizers>
+                    <TapGestureRecognizer Command="{Binding OpenLocationFinderDialogCommand}"/>
+                </Label.GestureRecognizers>
+            </Label>
+
+
+        </HorizontalStackLayout>
+        
     </VerticalStackLayout>
 
 </ContentPage>
