Updating to CommunityToolkit.MVVM 8.0 and other changes. Lots of API stuff too

--- a/ShoppingList/View/SettingsView.xaml
+++ b/ShoppingList/View/SettingsView.xaml
@@ -45,7 +45,7 @@
             <Label Text="Default Kroger Location:"
                    TextColor="{StaticResource Primary}"
                    Margin="0,0,25,0"/>
-            <Label Text="{Binding KrogerLocation}"
+            <Label Text="{Binding KrogerStoreName}"
                    TextColor="{StaticResource Primary}"
                    >
                 <Label.GestureRecognizers>
