--- a/ShoppingList/View/MainPage.xaml
+++ b/ShoppingList/View/MainPage.xaml
@@ -17,12 +17,18 @@
             <CollectionView.ItemTemplate >
                 <DataTemplate x:DataType="model:UserList">
                     <Grid Padding="10">
-                        <Frame HeightRequest="100">
+                        <Frame>
                             <Frame.GestureRecognizers>
                                 <TapGestureRecognizer CommandParameter="{Binding .}"
                                                       Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:UserListViewModel}}, Path=GoToListItemsCommand}"/>
                             </Frame.GestureRecognizers>
-                            <Label Text="{Binding Name}"/>
+                            <VerticalStackLayout>
+                                <Label Text="{Binding Name}"
+                                       FontSize="Medium"/>
+                                <Label Text="{Binding Type}"
+                                       FontSize="Micro"
+                                       Margin="25,0,0,0"/>
+                            </VerticalStackLayout>
                         </Frame>
                     </Grid>
                 </DataTemplate>
@@ -32,8 +38,8 @@
         <Button Text="Get UserLists"
                 Command="{Binding GetUserListsCommand}"
                 IsEnabled="{Binding IsNotBusy}"
-                TextColor="{StaticResource Primary}"
-                BackgroundColor="{StaticResource Secondary}"
+                TextColor="{StaticResource Secondary}"
+                BackgroundColor="{StaticResource Primary}"
                 Grid.Row="1"
                 Margin="8"/>
 
@@ -41,8 +47,8 @@
         <Button Text="Create New List"
                 Command="{Binding CreateUserListCommand}"
                 IsEnabled="{Binding IsNotBusy}"
-                TextColor="{StaticResource Primary}"
-                BackgroundColor="{StaticResource Secondary}"
+                TextColor="{StaticResource Secondary}"
+                BackgroundColor="{StaticResource Primary}"
                 Grid.Row="1"
                 Grid.Column="3"
                 Margin="8"/>
